--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@ Copyright © 2018 - 2017 WebFace, WebFace
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LcPartOne</title>
+  <title>AGAS Client</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
